[gd_scene load_steps=8 format=3 uid="uid://dqi4bw7t4w0u8"]

[ext_resource type="Texture2D" uid="uid://dptxvrd0xlaxa" path="res://assets/character_portraits/demo_tecnico/LOBUKI DYB.PNG" id="1_h7r8c"]
[ext_resource type="Script" uid="uid://ck2ow411sbom1" path="res://scripts/add_new_character_animation.gd" id="1_neew8"]
[ext_resource type="Theme" uid="uid://orpj8osfch8d" path="res://assets/themes/happy_theme.tres" id="3_44l35"]
[ext_resource type="Theme" uid="uid://bci1eig3l1g22" path="res://assets/themes/attack_letter_theme.tres" id="4_ogdwp"]

[sub_resource type="Animation" id="Animation_44l35"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/CharacterSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1720, 630)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/CharacterName:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(950, 1029.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/NewCharacterText:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(950, 1130)]
}

[sub_resource type="Animation" id="Animation_neew8"]
resource_name = "new_character_animation"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 2.1, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/CharacterSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667, 0.466667),
"transitions": PackedFloat32Array(0.535887, 1),
"update": 0,
"values": [Vector2(1720, 741), Vector2(1720, 630)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/CharacterName:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.533333),
"transitions": PackedFloat32Array(0.517632, 1),
"update": 0,
"values": [Vector2(950, 1143.88), Vector2(950, 1029.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/NewCharacterText:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.166667, 0.6),
"transitions": PackedFloat32Array(0.420448, 1),
"update": 0,
"values": [Vector2(950, 1221), Vector2(950, 1130)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ogdwp"]
_data = {
&"RESET": SubResource("Animation_44l35"),
&"new_character_animation": SubResource("Animation_neew8")
}

[node name="AddNewCharacterAnimation" type="CanvasLayer"]
script = ExtResource("1_neew8")

[node name="Control" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CharacterSprite" type="TextureRect" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -450.0
offset_right = 200.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_h7r8c")

[node name="CharacterName" type="RichTextLabel" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -970.0
offset_top = -50.5
offset_right = 970.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_44l35")
bbcode_enabled = true
text = "[center][wave amp=60 freq=3][rainbow speed=1.0 freq=1.0 sat=0.9 val=1.0]W a v e  &  C o l o r s ![/rainbow][/wave][/center]
"
fit_content = true

[node name="NewCharacterText" type="RichTextLabel" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -970.0
offset_top = 50.0
offset_right = 970.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ogdwp")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.890196, 0.85098, 0.843137, 1)
theme_override_constants/outline_size = 18
theme_override_font_sizes/normal_font_size = 53
bbcode_enabled = true
text = "[center] Â¡Nuevo personaje desbloqueado!"
fit_content = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ogdwp")
}
